--- a/Sofware Otimar SAS/css/styleformularios.css
+++ b/Sofware Otimar SAS/css/styleformularios.css
@@ -102,12 +102,14 @@ form p a {  /* */
     margin-left: 0px;
     color:#244F28;
     justify-content: left;
-  
-   
-   
+}
 
-    
-    
+.error{
+    width: 200%;
+    text-align: center;
+    margin: auto;
+    color: #E65100;
+    padding-top: 20px;
 }
 
 .btn-field{ /* botones*/
